working spotify api the hard way

--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,12 @@
     <script>
     if(window.location.hash)
       console.log("Hash is: " + window.location.hash);
-      $.ajax({type: 'PUT', url: "key", data: {"hash": window.location.hash}, success: function(result){
+      var lochash    = window.location.hash.substr(1),
+      token = lochash.substr(window.location.hash.indexOf('access_token='))
+                    .split('&')[0]
+                    .split('=')[1]
+      console.log('token: ' + token)
+      $.ajax({type: 'PUT', contentType: "application/json", url: 'key', data: JSON.stringify({"token": token}), success: function(result){
         document.body.innerHTML = result;
       }});
     </script>
